Synced up to AI Lectures.

--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,13 @@ Plugins/*/Intermediate/*
 
 # Cache files for the editor to use
 DerivedDataCache/*
+
+# RiderLink Plugin
+Plugins/Developer/RiderLink/*
+
+# HoloLens
+Config/HoloLens/*
+
+# __Externals & HLOD0
+Content/__External*/*
+Content/ActionRoguelike/Maps/*HLOD0*
