--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -53,3 +53,7 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
+[/Script/EngineSettings.GameMapsSettings]
+EditorStartupMap=/Game/ActionRoguelike/Maps/TestLevel.TestLevel
+GameDefaultMap=/Game/ActionRoguelike/Maps/TestLevel.TestLevel
+
