--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -56,4 +56,5 @@ ManualIPAddress=
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/ActionRoguelike/Maps/TestLevel.TestLevel
 GameDefaultMap=/Game/ActionRoguelike/Maps/TestLevel.TestLevel
+GlobalDefaultGameMode=/Game/ActionRoguelike/GameModeBP.GameModeBP_C
 
