--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -83,6 +83,6 @@ ManualIPAddress=
 
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/ActionRoguelike/Maps/TestLevel.TestLevel
-GameDefaultMap=/Game/ActionRoguelike/Maps/TestLevel.TestLevel
+GameDefaultMap=/Game/ActionRoguelike/Maps/MainMenu_Entry.MainMenu_Entry
 GlobalDefaultGameMode=/Game/ActionRoguelike/GameModeBP.GameModeBP_C
 
